fix(custom.css): Change line color at dark mode of multiline list

--- a/src/rocm_docs/rocm_docs_theme/static/custom.css
+++ b/src/rocm_docs/rocm_docs_theme/static/custom.css
@@ -50,6 +50,9 @@ html[data-theme="light"] {
 /* for the dark theme */
 html[data-theme="dark"] {
   --link-color: #2899ff;
+  .line{
+    color: #fff;
+  };
 }
 
 div#site-navigation {
